day1 ready to go

--- a/day01/day01_exercises.ipynb
+++ b/day01/day01_exercises.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Day 1 Exercises (Core Python)\n",
     "\n",
-    "## Part 1: Spike Counts"
+    "## Part 1: Spike Counts\n",
+    "\n",
+    "Imagine you've just finished recording from a V1 neuron. Across 60 experimental trials, you presented either a vertical or horizontal Gabor patch (30 each) and recorded the corresponding number of spikes (counts below). Now you want to ask some questions of your data."
    ]
   },
   {
@@ -100,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 2: Basic Functions\n",
+    "### Exercise 2: Built-in Functions\n",
     "\n",
     "a) Compute and store in separate variables the max spike count from each stimulus condition. Then, using an `if/else` statement, write some code which prints out which condition had the larger max count."
    ]
@@ -218,7 +220,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 2: Challenges"
+    "## Part 2: Challenges\n",
+    "\n",
+    "Below are some programming challenges to test out your python muster!"
    ]
   },
   {
