--- a/day02/day02_exercises.ipynb
+++ b/day02/day02_exercises.ipynb
@@ -4,31 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NumPy Exercises"
+    "# Day 2 Exercises (NumPy + Matplotlib)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 1\n",
-    "### Generate an array of numbers 0-24. Reshape to a 5x5 matrix."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Extract the diagonal of this matrix."
+    "## Part 1: Basic NumPy Operations\n",
+    "a) Generate an array of numbers 0-24. Reshape to a 5x5 matrix."
    ]
   },
   {
@@ -44,8 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Multiply the matrix by an identity matrix of the same shape. Confirm that it is identical to the original.\n",
-    "Hint: Use **np.all** command to confirm all equal. "
+    "b) Extract the diagonal of this matrix."
    ]
   },
   {
@@ -61,142 +44,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using *np.concatenate*, join the matrix with itself and return a new matrix with shape (5,5,2).\n",
-    "Hint: Use reshape to give the matrix a third axis before using using **np.concatenate**."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Compute the mean of the concatenated matrix along the third axis. Confirm its equal to the original matrix."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Return the indices of the matrix where the elements are greater than 15."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Using *np.where*, set all elements of the matrix greater than 15 to 1, else 0.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Set all elements of the matrix greater than 15 to 2, less than 5 to 1, else 0.\n",
-    "Hint: **np.where** can be passed as an input to **np.where**."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Return the lower triangular matrix."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Define a demean function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Apply the demean function across each row of the matrix."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exercise 2\n",
-    "In this exercise, we will demonstrate the 68–95–99.7 rule of normal distributions. \n",
-    "### Simulate 100 data points from a normal distribution with: \n",
-    "> mu = 0\n",
+    "c) Multiply the matrix by an identity matrix of the same shape. Confirm that it is identical to the original.\n",
     "\n",
-    ">sd = 0.5."
+    "Hint: Use `np.all` command to confirm all equal. "
    ]
   },
   {
@@ -212,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compute the mean and standard deviation of your sample."
+    "d) Join the matrix with itself and return a new matrix with shape (2,5,5)."
    ]
   },
   {
@@ -228,8 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Find the fraction of data within (mu - 1sd, mu + 1sd)\n",
-    "Hint: Use the chaining of np.where"
+    "e) Compute the mean of the concatenated matrix along the first axis. Confirm its equal to the original matrix."
    ]
   },
   {
@@ -245,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Find the fraction of data within (mu - 2sd, mu + 2sd)"
+    "f) Return the indices of the matrix where the elements are greater than 15."
    ]
   },
   {
@@ -261,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Find the fraction of data within (mu - 3sd, mu + 3sd)"
+    "g) Using `np.where`, set all elements of the matrix greater than 15 to 1, else 0.\n"
    ]
   },
   {
@@ -277,18 +126,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Using *np.random.multivariate_normal*, simulate 100 observations of two variables drawn from a multivariate normal with parameters:\n",
-    "> mu = [0,0]\n",
+    "h) Set all elements of the matrix greater than 15 to 2, less than 5 to 1, else 0.\n",
     "\n",
-    "> cov = [1.0, 0.4]<br>\n",
-    ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[0.4, 1.0]"
+    "Hint: `np.where` can be passed as an input to `np.where`."
    ]
   },
   {
@@ -304,8 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Correlate the variables.\n",
-    "Hint: Remember the transposition attribute."
+    "i) Return the lower triangle of the original matrix."
    ]
   },
   {
@@ -321,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Perform linear regression using *np.linalg.lstsq*."
+    "j) Define a demean function."
    ]
   },
   {
@@ -330,6 +169,350 @@
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "k) Apply the demean function across each row of the matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2: Spike Detection\n",
+    "\n",
+    "In the following exercises, you will be manipulating, analyzing, and visualizing preprocessed extracellular electrophysiological data. Specifically, the following 10s recording was taken from the abdomen of a crayfish. Action potentials are readily apparent throughout the entire recording. \n",
+    "\n",
+    "First, we load the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "## Load data.\n",
+    "npz = np.load('spikes.npz')\n",
+    "data = npz['data'] * 1e6      # Convert to uV\n",
+    "times = npz['times']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a) Plot the entire raw recording. Do multiple types of spikes appear to be present?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b) In a recent paper, [Rey et al. (2015)](https://www.sciencedirect.com/science/article/pii/S0361923015000684) suggest a simple spike detection technique via data-driven amplitude thresholding. Specifically, they propose an automated amplitude threshold that defined as multiple of an estimate of the standard deviation of the noise:\n",
+    "\n",
+    "$$ \\text{threshold} = k \\cdot \\hat{\\sigma}_n $$\n",
+    "\n",
+    "where $k$ is a constant typically between 3-5; and $\\hat{\\sigma}_n$ is an estimate of the standard deviation of the noise, defined as:\n",
+    "\n",
+    "$$ \\hat{\\sigma}_n = \\frac{\\text{median} \\left( |X| \\right)}{0.6745} $$ \n",
+    "\n",
+    "where $|X|$ is the absolute value of the raw data.\n",
+    "\n",
+    "Write a function that returns the amplitude threshold as defined above. The function should accept as arguments the raw data, $X$, and the constant, $k$. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c) Next we need a function that can detect slices of the raw signal that exceed the threshold. This ultimately becomes a clustering problem (i.e. identifying \"islands\" of signal rising above an \"ocean of noise\"). Though this is definitely doable with core NumPy, the SciPy library has built-in functions specifically written for these purposes. \n",
+    "\n",
+    "Because these functions are beyond the scope of the bootcamp, we have provided a peak finding function for you. The function, `peak_finder`, accepts a raw data trace and a threshold. It then finds all clusters of samples above a threshold, and returns the index and signal magnitude corresponding to the peak of each cluster.\n",
+    "\n",
+    "The function relies on the `measurements` tools from scipy.ndimage. For a tutorial, see [here](https://dragly.org/2013/03/25/working-with-percolation-clusters-in-python/).\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def peak_finder(X, thresh):\n",
+    "    \"\"\"Simple peak finding algorithm.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    X : array_like, shape (n_times,)\n",
+    "        Raw data trace.\n",
+    "    thresh : float\n",
+    "        Amplitude threshold.\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    peak_loc : array_like, shape (n_clusters,)\n",
+    "        Index of peak amplitudes.\n",
+    "    peak_mag : array_like, shape (n_clusters,)\n",
+    "        Magnitude of peak amplitudes.\n",
+    "    \"\"\"\n",
+    "    import numpy as np\n",
+    "    from scipy.ndimage import measurements\n",
+    "    \n",
+    "    ## Error-catching.\n",
+    "    assert X.ndim == 1\n",
+    "    \n",
+    "    ## Identify clusters.\n",
+    "    clusters, ix = measurements.label(X > thresh)\n",
+    "    \n",
+    "    ## Identify index of peak amplitudes. \n",
+    "    peak_loc = np.concatenate(measurements.maximum_position(X, labels=clusters, index=np.arange(ix)+1))\n",
+    "    \n",
+    "    ## Identify magnitude of peak amplitudes.\n",
+    "    peak_mag = measurements.maximum(X, labels=clusters, index=np.arange(ix)+1)\n",
+    "    return peak_loc, peak_mag"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "d) Apply the peak detection algorithm to the raw data using a constant $k=6$. Plot a histogram of the spike amplitudes (try bins of 0-150 in increments of 5 uV). \n",
+    "\n",
+    "How many spikes are detected? How many types of spikes do there appear to be?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "e) Plot the first second of the data. Using a scatterplot (or any other method you can think of), indicate the peak for each detected spike."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "f) Remake the plot above, but repeating the procedure with a constant $k=2$. How trustworthy is the spike detection algorithm with this more liberal threshold?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "g) Returning now to the detected spikes when $k=6$, define a set of boundaries that divides the spikes into three clusters. How many spikes are in each cluster?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "h) Action potentials last roughly 1-2 milliseconds. With this in mind, extract a 3 ms window around each detected spike; that is, extract 1.5 ms of samples on either side of the detected peak. Store each epoch according to its cluster. \n",
+    "\n",
+    "Hint: The data were recorded at 10 KHz meaning there are 10 samples per millisecond. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "i) Plot each averaged spike waveform in a single plot. Add a legend denoting the spike cluster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 3: Two-Photon Recordings\n",
+    "\n",
+    "In this set of exercises, you will manipulate, analyze, and visualize preprocssed two-photon calcium imaging data collected from a larval zebrafish. A schematic of the experimental setup is below. The larval zebrafish was fixed in place and presented a series of rotating light-dark bands. The stimuli moved either in clockwise rotation (red) or counterclockwise rotation (blue). The green box indicates the section of the zebrafish imaged."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"larval_zebrafish.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we load in the data. Note, the data is three-dimensional, *[time, x-dim, y-dim]*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "## Load data.\n",
+    "npz = np.load('calcium.npz')\n",
+    "data = npz['data']\n",
+    "times = npz['times']\n",
+    "cw = npz['cw']\n",
+    "ccw = npz['ccw']\n",
+    "\n",
+    "print(data.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a) Using `plt.imshow`, plot the total luminance (i.e. sum across all timepoints within each pixel)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b) Using `np.percentile`, create different masks of the data by setting to zero pixels that fall beneath some percentile of brightness. How well can you isolate individual neurons?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c) To get a better understanding of the timing of the experiment, plot the clockwise (CW) and counterclockwise (CCW) stimulus timeseries. Add a legend to differentiate the two."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "d) Next, we will try to isolate neurons selective to clockwise rotation of the visual stimulus. To do so, matrix multiply (i.e. take the inner product of) the clockwise stimulus timeseries and the 3d data matrix. Plot the resulting mask with `plt.imshow`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "e) Repeat the step above but now for the counterclockwise stimulus timeseries. Are a different set of neurons now more prominent?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "f) Extract the timeseries of the 99th percentile brightest pixels from the thresholded maps in (d) and (e). Average the pixel timeseries within each condition (i.e. CW, CCW). Finally, plot the two separate averaged timeseries. Do they resemble the stimulus timeseries plots in (c)?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
